deployments-2/backend/lh_patient_backend/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresslhpatientbackend
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/http2-push-preload: "true"
spec:
  # tls:
  #   - hosts:
  #     - default
  #     secretName: lh-ssl-secret
  rules:
    - host:
      http:
        paths:
         - path: /patient-api
           pathType: Prefix
           backend:
             service:
              name: servicelhpatientbackend
              port:
                number: 80
